[gd_scene load_steps=64 format=2]

[ext_resource path="res://IntroScene.gd" type="Script" id=1]
[ext_resource path="res://ButtonStyleActive.tres" type="StyleBox" id=2]
[ext_resource path="res://ButtonStyleNormal.tres" type="StyleBox" id=3]
[ext_resource path="res://fonts/lemon_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/dora_intro_animation/intro_ani_5.png" type="Texture" id=5]
[ext_resource path="res://assets/dora_intro_animation/intro_ani_3.png" type="Texture" id=6]
[ext_resource path="res://assets/dora_intro_animation/intro_ani_6.png" type="Texture" id=7]
[ext_resource path="res://assets/dora_intro_animation/intro_ani_7.png" type="Texture" id=8]
[ext_resource path="res://assets/dora_intro_animation/intro_ani_1.png" type="Texture" id=9]
[ext_resource path="res://assets/dora_intro_animation/intro_ani_2.png" type="Texture" id=10]
[ext_resource path="res://assets/dora_intro_animation/intro_ani_4.png" type="Texture" id=11]
[ext_resource path="res://assets/dora_intro_animation/intro_ani_8.png" type="Texture" id=12]
[ext_resource path="res://assets/dora_intro_animation/intro_ani_9.png" type="Texture" id=13]
[ext_resource path="res://fonts/Lemon-Regular.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://screens/03_game_intro.png" type="Texture" id=15]
[ext_resource path="res://actors/gata_animation/gata_idle_04.png" type="Texture" id=16]
[ext_resource path="res://assets/armchair.png" type="Texture" id=17]
[ext_resource path="res://actors/fish_animation/fish_bubble_04.png" type="Texture" id=18]
[ext_resource path="res://actors/fish_animation/fish_jump_04.png" type="Texture" id=19]
[ext_resource path="res://actors/gata_animation/gata_idle_02.png" type="Texture" id=20]
[ext_resource path="res://actors/gata_animation/gata_idle_03.png" type="Texture" id=21]
[ext_resource path="res://actors/gata_animation/gata_idle_01.png" type="Texture" id=22]
[ext_resource path="res://actors/fish_animation/fish_jump_08.png" type="Texture" id=23]
[ext_resource path="res://actors/fish_animation/fish_jump_13.png" type="Texture" id=24]
[ext_resource path="res://actors/pendulum_animation/pendulum07.png" type="Texture" id=25]
[ext_resource path="res://actors/pendulum_animation/pendulum04.png" type="Texture" id=26]
[ext_resource path="res://actors/pendulum_animation/pendulum05.png" type="Texture" id=27]
[ext_resource path="res://actors/pendulum_animation/pendulum06.png" type="Texture" id=28]
[ext_resource path="res://actors/pendulum_animation/pendulum01.png" type="Texture" id=29]
[ext_resource path="res://actors/pendulum_animation/pendulum02.png" type="Texture" id=30]
[ext_resource path="res://actors/pendulum_animation/pendulum00.png" type="Texture" id=31]
[ext_resource path="res://actors/pendulum_animation/pendulum03.png" type="Texture" id=32]
[ext_resource path="res://actors/gata_animation/gata_awake_09.png" type="Texture" id=33]
[ext_resource path="res://actors/fish_animation/fish_idle_02.png" type="Texture" id=34]
[ext_resource path="res://actors/fish_animation/fish_idle_03.png" type="Texture" id=35]
[ext_resource path="res://actors/fish_animation/fish_idle_01.png" type="Texture" id=36]
[ext_resource path="res://actors/fish_animation/fish_jump_14.png" type="Texture" id=37]
[ext_resource path="res://actors/fish_animation/fish_bubble_08.png" type="Texture" id=38]
[ext_resource path="res://actors/fish_animation/fish_bubble_02.png" type="Texture" id=39]
[ext_resource path="res://actors/fish_animation/fish_jump_11.png" type="Texture" id=40]
[ext_resource path="res://actors/fish_animation/fish_jump_15.png" type="Texture" id=41]
[ext_resource path="res://actors/fish_animation/fish_bubble_01.png" type="Texture" id=42]
[ext_resource path="res://actors/fish_animation/fish_bubble_07.png" type="Texture" id=43]
[ext_resource path="res://actors/fish_animation/fish_jump_03.png" type="Texture" id=44]
[ext_resource path="res://actors/fish_animation/fish_jump_07.png" type="Texture" id=45]
[ext_resource path="res://actors/fish_animation/fish_jump_09.png" type="Texture" id=46]
[ext_resource path="res://actors/fish_animation/fish_bubble_09.png" type="Texture" id=47]
[ext_resource path="res://actors/fish_animation/fish_bubble_06.png" type="Texture" id=48]
[ext_resource path="res://actors/fish_animation/fish_bubble_03.png" type="Texture" id=49]
[ext_resource path="res://actors/fish_animation/fish_bubble_05.png" type="Texture" id=50]
[ext_resource path="res://actors/fish_animation/fish_jump_01.png" type="Texture" id=51]
[ext_resource path="res://actors/fish_animation/fish_jump_05.png" type="Texture" id=52]
[ext_resource path="res://actors/fish_animation/fish_jump_06.png" type="Texture" id=53]
[ext_resource path="res://actors/fish_animation/fish_jump_10.png" type="Texture" id=54]
[ext_resource path="res://actors/fish_animation/fish_jump_12.png" type="Texture" id=55]
[ext_resource path="res://actors/fish_animation/fish_jump_02.png" type="Texture" id=56]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "intro_ani",
"speed": 2.5
} ]

[sub_resource type="DynamicFont" id=7]
size = 44
outline_size = 7
outline_color = Color( 0.203922, 0.196078, 0.196078, 1 )
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("IntroText:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IntroText:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "intro_text_ani"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("IntroText:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "IntroTextAniEnded"
} ]
}

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 16 ) ],
"loop": true,
"name": "gata_idle",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 32 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 25 ) ],
"loop": true,
"name": "pendulum_idle",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=64]
animations = [ {
"frames": [ ExtResource( 36 ), ExtResource( 34 ), ExtResource( 35 ) ],
"loop": true,
"name": "fish_idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 39 ), ExtResource( 49 ), ExtResource( 18 ), ExtResource( 50 ), ExtResource( 48 ), ExtResource( 43 ), ExtResource( 38 ), ExtResource( 47 ) ],
"loop": true,
"name": "fish_bubbles",
"speed": 8.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 56 ), ExtResource( 44 ), ExtResource( 19 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 45 ), ExtResource( 23 ), ExtResource( 46 ), ExtResource( 54 ), ExtResource( 40 ), ExtResource( 55 ), ExtResource( 24 ), ExtResource( 37 ), ExtResource( 41 ) ],
"loop": true,
"name": "fish_jump",
"speed": 8.0
} ]

[node name="IntroScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="IntroScreenBkg" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 558.0
margin_top = 1136.0
margin_right = 1362.0
margin_bottom = 1352.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "Empezar juego"

[node name="IntroAniSprite" type="AnimatedSprite" parent="."]
position = Vector2( 480.25, 684 )
scale = Vector2( 1.1685, 1.51788 )
frames = SubResource( 2 )
animation = "intro_ani"
frame = 1

[node name="IntroText" type="RichTextLabel" parent="."]
margin_left = 442.0
margin_top = 501.0
margin_right = 1491.0
margin_bottom = 711.0
rect_pivot_offset = Vector2( 1525, -335 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]¡Consigue que la gatita Audrey destroce
el abrigo rojo sin despertar a su dueña
y obtindràs tu recompensa![/center]"
visible_characters = 0
percent_visible = 0.0
text = "¡Consigue que la gatita Audrey destroce
el abrigo rojo sin despertar a su dueña
y obtindràs tu recompensa!"
override_selected_font_color = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/intro_text_ani = SubResource( 5 )

[node name="AudreySprite" type="AnimatedSprite" parent="."]
position = Vector2( 1147, 857 )
frames = SubResource( 6 )
animation = "gata_idle"
speed_scale = 0.0
playing = true

[node name="Armchair" type="Sprite" parent="."]
position = Vector2( 356.5, 800 )
texture = ExtResource( 17 )

[node name="SpritePendulum" type="AnimatedSprite" parent="."]
position = Vector2( 1231, 383 )
frames = SubResource( 18 )
animation = "pendulum_idle"
frame = 5
playing = true

[node name="SpriteFish" type="AnimatedSprite" parent="."]
position = Vector2( 1641, 653 )
frames = SubResource( 64 )
animation = "fish_idle"
frame = 1
playing = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="IntroAniSprite" to="." method="_on_IntroAniSprite_animation_finished"]
